# upstreamliteracy-ecom

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Makefile  docker-compose.yml  railway.frontend.toml  railway.toml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  throttles.py  urls_accounts.py  urls_auth.py  validators.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/analytics/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/analytics/migrations/: 0001_initial.py
backend/apps/cart/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/cart/migrations/: 0001_initial.py
backend/apps/catalog/: admin.py  apps.py  filters.py  models.py  serializers.py  test_filters.py  urls.py  views.py
backend/apps/checkout/: admin.py  apps.py  models.py  serializers.py  services.py  tax_rates.json  urls.py  views.py
backend/apps/core/: apps.py  email.py  exceptions.py  health.py  live.py  middleware.py  pagination.py  permissions.py
backend/apps/inventory/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/orders/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/payments/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: gunicorn.conf.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
docs/: plan-generator.md  (+3 more)
(+79 files in other folders)
